--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
     "vue": "^3.2.47",
     "vue-router": "^4.4.5"
   },
